# litpilot

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  hackathon-mastery.md
BE/: .env.example  Dockerfile  pyproject.toml  server.py
BE/agents/: executor.py  intent.py  knowledge.py
BE/tools/: fetch_history.py  tinyfish.py
FE/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
FE/src/: App.vue  style.css
FE/src/components/: ExecutionStream.vue  InputForm.vue  IntentReview.vue  ReportDisplay.vue
FE/src/composables/: useApi.js
FE/src/router/: index.js
FE/src/views/: HomePage.vue
