[project]
name = "litpilot-backend"
version = "0.1.0"
description = "LitPilot — Autonomous Research Agent for Literature Reviews"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "openai",
    "httpx",
    "sse-starlette",
    "python-dotenv",
    "python-multipart",
    "uvicorn[standard]",
    "fastapi[standard]",
    "mistralai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents"]
